修复 Portable 无法启动的问题